<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_add_project">Add Project</string>
    <string name="login_button">Login</string>
    <string name="no_login">Login Unsuccessful</string>
    <string name="new_user">New User:</string>
    <string name="undo">Undo</string>
    <string name="undo_all">Undo All</string>
    <string name="item_deleted">Item deleted</string>
    <string name="n_items_deleted">%1$s items deleted</string>
    <string name="create_account">Create an Account</string>
    <string name="website_login">http://queuer-rndapp.rhcloud.com/api/v1/session</string>
    <string name="website_create">http://queuer-rndapp.rhcloud.com/api/v1/users</string>
    <string name="remember">Remember Me</string>
    <string name="auto_login">Log Me In Automatically</string>
    <string name="have_account">Already Have An Account</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="account_successful">Created Account Successfully</string>
    <string name="account_unsuccessful">Create Account Unsuccessfully</string>
    <string name="action_logout">Log Out</string>
    <string name="task">Task</string>
    <string name="project">Project</string>
    <string name="zero">0</string>
    <string name="finish">Exit</string>
    <string name="edit_task">Edit Tasks</string>
    <string name="edit_project">Edit Project</string>
    <string name="no_task">NO TASKS AVAILABLE</string>
</resources>
