<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity"
    tools:ignore="MergeRootFrame">

    <EditText
        android:inputType="text"
        android:hint="@string/username"
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/create_button"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="create_account"
        android:layout_marginBottom="20dp"/>

    <include layout="@layout/progress_bar"
        android:id="@+id/prog_bar"
        android:visibility="gone"/>

   
    <TextView
        android:id="@+id/account_successful"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_successful"
        android:visibility="gone" />
    <TextView
        android:id="@+id/account_unsuccessful"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_unsuccessful"
        android:visibility="gone" />

    <TextView android:id="@+id/go_back"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:text="@string/have_account"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#0b84aa"
        android:layout_gravity="center"/>

</LinearLayout>